# coursera

./: .gitignore  README.md
algorithms1/: README.md
algorithms1/week1/: Main.hs  Makefile  Percolation.hs  PercolationStats.hs  Trash.hs  WeightedQuickUnion.hs  algorithms1-week1.cabal
algorithms1/week1/tests/: MyHUnit.hs  MyQuickCheck.hs  TestMain.hs
algorithms1/week4/: Makefile  README.md  eightpuzzle.cabal
algorithms1/week4/src/: EightPuzzle.hs  Main.hs
algorithms1/week4/src/EightPuzzle/: Internal.hs  PriorityQueue.hs
algorithms1/week4/src/EightPuzzle/PriorityQueue/: Internal.hs
algorithms1/week4/test/: HUnitTests.hs  QuickCheckTests.hs  TestMain.hs
machine-learning/machine-learning-ex1/ex1/: computeCost.m  computeCostMulti.m  ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  hypothesis.m
machine-learning/machine-learning-ex2/ex2/: costFunction.m  costFunctionReg.m
machine-learning/machine-learning-ex3/ex3/: ex3.m  ex3_nn.m  lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m
machine-learning/machine-learning-ex4/ex4/lib/: submitWithConfiguration.m
machine-learning/machine-learning-ex5/ex5/: ex5.m  learningCurve.m  linearRegCostFunction.m  polyFeatures.m  validationCurve.m
